--- a/CSS/landing_page_car/index.html
+++ b/CSS/landing_page_car/index.html
@@ -18,6 +18,7 @@
         <a href="#">About</a>
         <a href="#">Review</a>
         <a href="#">Feactured</a>
+        <!-- esto es un comentario -->
         <a href="#">Contact</a>
       </nav>
       <div class="social-media">
