--- a/Segundo Filtro/index.html
+++ b/Segundo Filtro/index.html
@@ -3,16 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styless/main.css" />
-    <link rel="stylesheet" href="styless/main2.css" />
-
     <link rel="stylesheet" href="styless/nav.css" />
+    <link rel="stylesheet" href="styless/main.css" />
+    <link rel="stylesheet" href="styless/game-home/g-home.css" />
+    <link rel="stylesheet" href="styless/game-home/bonus.css" />
+    <link rel="stylesheet" href="styless/game-home/new-games.css" />
+    <link rel="stylesheet" href="styless/game-home/poins.css" />
+    <link rel="stylesheet" href="styless/right.css" />
+    <link
+      rel="shortcut icon"
+      href="./styless/img/pacman-145864_1280.png"
+      type="image/x icon"
+    />
 
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>RiwiBet</title>
+    <title>RiwiGames</title>
   </head>
   <body>
     <header class="header">
@@ -24,28 +32,31 @@
         <div class="login">Sign Up</div>
       </nav>
     </header>
-    <main>
+    <main class="main">
       <section class="games-home">
         <div class="g-home">
-          <div class="cant">
-            <div>+50</div>
-          </div>
           <div class="sub-name">
-            <p>Riwi</p>
-            <p class="r">Games</p>
-            <img src="./img/pacman-145864_1280.png" alt="pacman" />
-          </div>
-          <div class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-            magnam. Recusandae neque, dolorem obcaecati dolor dignissimos sed
-            omnis est quae architecto consequuntur natus nam, veritatis rem
-            voluptas animi nesciunt quaerat!
+            <div class="card">+50</div>
+            <h1>
+              Riwi
+              <span class="text-succes">Games</span>
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi,
+              maxime aperiam rem nostrum odio quaerat. Officiis vel quas quo
+              voluptas obcaecati sint eos illum harum
+            </p>
+            <img
+              src="./styless/img/pacman-145864_1280.png"
+              alt="pacman"
+              width="200px"
+            />
           </div>
         </div>
         <div class="bonus">
           <div class="s-bonus">
             <div class="img">
-              <img src="./img/dice-25637_640.png" alt="**" />
+              <img src="./styless/img/dice-25637_640.png" alt="**" />
             </div>
             <div class="tex">
               <p>First deposit Bonus</p>
@@ -54,16 +65,16 @@
           </div>
           <div class="s-bonus">
             <div class="img">
-              <img src="./img/cards-48949_640.png" alt="" />
+              <img src="./styless/img/cards-48949_640.png" alt="" />
             </div>
             <div class="tex">
               <p>First deposit Bonus</p>
-              <span>+600</span>
+              <span>+1200</span>
             </div>
           </div>
           <div class="s-bonus">
-            <div class="img2">
-              <img src="./img/bowling-157933_640.png" alt="" />
+            <div class="img">
+              <img src="./styless/img/bowling-157933_640.png" alt="" />
             </div>
             <div class="tex">
               <p>First deposit Bonus</p>
@@ -86,7 +97,7 @@
           <div class="s-poins">
             <div class="accumulated">$ 3.421.199.90</div>
             <div class="text">Prime Riwi Points</div>
-            <img src="./img/Imagen1.png" alt="**" />
+            <img src="./styless/img/Imagen1.png" alt="**" />
             <div class="classification">
               <div class="c1">
                 <div class="c11">
@@ -123,7 +134,16 @@
         </div>
       </section>
       <section class="home-rating">
-        <div class="rating"></div>
+        <div class="rating">
+          <div class="tittle">Riwi Points</div>
+          <div class="user">
+            <div class="user-date">
+              <div class="picture"></div>
+              <div class="name">Keiber Lazaro</div>
+            </div>
+            <div class="points">10 000 000</div>
+          </div>
+        </div>
         <div class="clans"></div>
         <div class="img"></div>
       </section>
