--- a/Segundo Filtro/index.html
+++ b/Segundo Filtro/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styless/game-home/bonus.css" />
     <link rel="stylesheet" href="styless/game-home/new-games.css" />
     <link rel="stylesheet" href="styless/game-home/poins.css" />
-    <link rel="stylesheet" href="styless/right.css" />
+    <link rel="stylesheet" href="styless/home-rating/rating.css" />
     <link
       rel="shortcut icon"
       href="./styless/img/pacman-145864_1280.png"
@@ -138,13 +138,56 @@
           <div class="tittle">Riwi Points</div>
           <div class="user">
             <div class="user-date">
-              <div class="picture"></div>
+              <div class="picture" id="a"></div>
               <div class="name">Keiber Lazaro</div>
             </div>
-            <div class="points">10 000 000</div>
+            <div class="points" id="best">10 000 000</div>
+          </div>
+          <div class="user">
+            <div class="user-date">
+              <div class="picture" id="b"></div>
+              <div class="name">Kevin Mejia</div>
+            </div>
+            <div class="points">6 000 000</div>
+          </div>
+          <div class="user">
+            <div class="user-date">
+              <div class="picture" id="c"></div>
+              <div class="name">Javier Combita</div>
+            </div>
+            <div class="points">2 000 000</div>
+          </div>
+          <div class="user">
+            <div class="user-date">
+              <div class="picture" id="d"></div>
+              <div class="name">Ken Castro</div>
+            </div>
+            <div class="points">500 000</div>
+          </div>
+          <div class="user">
+            <div class="user-date">
+              <div class="picture" id="e"></div>
+              <div class="name">Darwing Mosquera</div>
+            </div>
+            <div class="points">400 000</div>
           </div>
         </div>
-        <div class="clans"></div>
+        <div class="clans">
+          <div class="tittle">Clans</div>
+          <div class="container">
+            <div class="cont1">
+              <div></div>
+              <div></div>
+            </div>
+            <div class="cont2">
+              <div class="cont2-1">
+                <div></div>
+                <div></div>
+              </div>
+              <div class="cont2-2"></div>
+            </div>
+          </div>
+        </div>
         <div class="img"></div>
       </section>
     </main>
