--- a/JavaScript/06-Estructuras de control/index.html
+++ b/JavaScript/06-Estructuras de control/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Estructuras de Control</h1>
-    <script src="js/app.js"></script>
+    <script src="js/macondo.js"></script>
   </body>
 </html>
