--- a/JavaScript/09 - DOM P1/index.html
+++ b/JavaScript/09 - DOM P1/index.html
@@ -34,6 +34,23 @@
         width="400"
       />
     </section>
+    <table>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Nombre</th>
+          <th>Edad</th>
+          <th>Ciudad</th>
+          <th>Genero</th>
+        </tr>
+      </thead>
+      <tbody id="contenido">
+        <tr>
+          <th colspan="5">Cargando datos ...</th>
+        </tr>
+      </tbody>
+    </table>
+
     <script src="js/app.js"></script>
   </body>
 </html>
