--- a/JavaScript/10-Animaciones con texto/index.html
+++ b/JavaScript/10-Animaciones con texto/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h2 id="maquina_escribir">Maquina de escribir</h2>
+    <h2 id="text">Vanilla JavaScript</h2>
     <script src="js/app.js"></script>
   </body>
 </html>
