--- a/JavaScript/11-Navidad/index.html
+++ b/JavaScript/11-Navidad/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div class="contenedor">
+      <div class="img">
+        <img id="imgA" src="./img/tree.png" alt="" />
+        <img id="imgB" src="./img/tree copy.png" alt="" />
+      </div>
       <div class="circulo"></div>
       <div class="nieve"></div>
       <div class="contenedor-timer">
