--- a/JavaScript/11-Navidad/index.html
+++ b/JavaScript/11-Navidad/index.html
@@ -7,15 +7,33 @@
     <title>Document</title>
   </head>
   <body>
+    <audio src="img/music.mp3" id="musica-navideña"></audio>
     <div class="contenedor">
       <div class="img">
-        <img id="imgA" src="./img/tree.png" alt="" />
-        <img id="imgB" src="./img/tree copy.png" alt="" />
+        <div class="imgA"></div>
+        <div class="imgB"></div>
       </div>
       <div class="circulo"></div>
       <div class="nieve"></div>
       <div class="contenedor-timer">
-        <div class="timer">hora</div>
+        <div class="timer">
+          <div class="item">
+            <p id="dia-timer"></p>
+            <p class="item-text">Días</p>
+          </div>
+          <div class="item">
+            <p id="hora-timer"></p>
+            <p class="item-text">Hora</p>
+          </div>
+          <div class="item">
+            <p id="minutos-timer"></p>
+            <p class="item-text">Minutos</p>
+          </div>
+          <div class="item">
+            <p id="segundos-timer"></p>
+            <p class="item-text">Segundos</p>
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/app.js"></script>
