--- a/JavaScript/12-Bootstrap/index.html
+++ b/JavaScript/12-Bootstrap/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="./asset/food-menu-solid-24.png"
+      type="image/x-icon"
+    />
     <title>Inventario</title>
   </head>
   <body>
@@ -99,7 +108,7 @@
                   class="offcanvas-title text-white"
                   id="offcanvasNavbarLabel"
                 >
-                  Nuevo Producto
+                  <i class="bx bx-cart-download"></i> Nuevo Producto
                 </h5>
                 <button
                   type="button"
@@ -109,7 +118,12 @@
                 ></button>
               </div>
               <div class="offcanvas-body bg-dark">
-                <form class="mt-3">
+                <!-- formulario -->
+                <form class="mt-3" id="form_productos">
+                  <!-- alerta -->
+                  <div class="d-none" id="alerta" role="alert">
+                    A simple danger alert with
+                  </div>
                   <div class="form-floating mb-3">
                     <input
                       type="text"
