--- a/HTML/portafolio/index.html
+++ b/HTML/portafolio/index.html
@@ -12,6 +12,7 @@
       content="desarrollo, web, mobile, fron-end, back-end, leandro, lazaro, python, js, JavaScript"
     />
     <meta name="autor" content="Keiber Leandro Lazaro Bastos" />
+    <link rel="stylesheet" href="./styles/navbar.css" />
     <link
       rel="shortcut icon"
       href="img/kickstarter-logo-24.png"
@@ -26,7 +27,10 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="logo">Logo.</a>
+      <div class="logo">
+        <div class="img"></div>
+        <span>KeiberLLB</span>
+      </div>
 
       <nav class="navbar">
         <a href="#" class="active">Home</a>
@@ -36,20 +40,38 @@
         <a href="#">Contact</a>
       </nav>
       <div class="social-media">
-        <a href="#" class="x">
-          <i class="bx bxl-twitter"></i>
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/in/k-leandro-l%C3%A1zaro-bastos-8008612a4?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+          class="l"
+          ><i class="bx bxl-linkedin"></i
+        ></a>
+        <a
+          target="_blank"
+          href="https://x.com/KeiberLLB?t=ZDeaJjb5hU84lanBLRFgYw&s=09"
+          class="x"
+        >
+          <i class="bx bx-x"></i>
         </a>
-        <a href="#" class="i">
+        <a
+          target="_blank"
+          href="https://www.instagram.com/leandrolazaro?utm_source=qr&igshid=OWM2ZWI5NDFkNA=="
+          class="i"
+        >
           <i class="bx bxl-instagram"></i>
         </a>
-        <a href="#" class="y">
+        <a
+          target="_blank"
+          href="https://youtube.com/@k.leandrolazarobastos3701?si=I44ovLhRDRfr5RIh"
+          class="y"
+        >
           <i class="bx bxl-youtube"></i>
         </a>
       </div>
     </header>
     <footer class="footer">
-      <a href="#" class="w"></a>
-      <a href="#" class="g"></a>
+      <a href="#" class="w"><i class="bx bxl-whatsapp"></i></a>
+      <a href="#" class="g"><i class="bx bxl-gmail"></i></a>
     </footer>
     <!-- <section>
     <h1>KEIBER LAZARO</h1>
