--- a/HTML/portafolio/index.html
+++ b/HTML/portafolio/index.html
@@ -70,8 +70,15 @@
       </div>
     </header>
     <footer class="footer">
-      <a href="#" class="w"><i class="bx bxl-whatsapp"></i></a>
-      <a href="#" class="g"><i class="bx bxl-gmail"></i></a>
+      <a
+        target="_blank"
+        href="https://api.whatsapp.com/send/?phone=3138319975&text"
+        class="w"
+        ><i class="bx bxl-whatsapp"></i
+      ></a>
+      <a href="mailto:leandro1991.9@gmail.com" class="g"
+        ><i class="bx bxl-gmail"></i
+      ></a>
     </footer>
     <!-- <section>
     <h1>KEIBER LAZARO</h1>
