--- a/JavaScript/carrito-compras-template-20231218T160806Z-001/carrito-compras-template/index.html
+++ b/JavaScript/carrito-compras-template-20231218T160806Z-001/carrito-compras-template/index.html
@@ -23,7 +23,7 @@
           <div class="two columns u-pull-right">
             <ul>
               <li class="submenu">
-                <img src="img/cart.png" id="img-carrito" />
+                <img src="img/cart.png" class="st" id="img-carrito" />
                 <div id="carrito">
                   <table id="lista-carrito" class="u-full-width">
                     <thead>
@@ -36,6 +36,13 @@
                       </tr>
                     </thead>
                     <tbody></tbody>
+                    <tfoot>
+                      <!--<tr>-->
+                        <!--.card-->
+                        <!--<td colspan="3">Total</td>-->
+                        <!--<td id="#suma-total" colspan="2"></td>-->
+                      </tr>
+                    </tfoot>
                   </table>
 
                   <a href="#" id="vaciar-carrito" class="button u-full-width"
@@ -62,7 +69,7 @@
               <h4>PANTALÓN CARGO SLIM FIT</h4>
               <p>Zara</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$152</span></p>
+              <p class="precio">$200<span class="u-pull-right">$152</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
@@ -83,7 +90,7 @@
               <h4>PANTALÓN CHINO ALGODÓN</h4>
               <p>Zara</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$132</span></p>
+              <p class="precio">$200<span class="u-pull-right">$132</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
