--- a/JavaScript/carrito-compras-template-20231218T160806Z-001/carrito-compras-template/index.html
+++ b/JavaScript/carrito-compras-template-20231218T160806Z-001/carrito-compras-template/index.html
@@ -36,13 +36,7 @@
                       </tr>
                     </thead>
                     <tbody></tbody>
-                    <tfoot>
-                      <!--<tr>-->
-                        <!--.card-->
-                        <!--<td colspan="3">Total</td>-->
-                        <!--<td id="#suma-total" colspan="2"></td>-->
-                      </tr>
-                    </tfoot>
+                    <tfoot></tfoot>
                   </table>
 
                   <a href="#" id="vaciar-carrito" class="button u-full-width"
@@ -134,7 +128,7 @@
               <h4>PANTALÓN CINTURA JOGGER EASY CARE</h4>
               <p>Zara</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$499</span></p>
+              <p class="precio">$499 <span class="u-pull-right">$200</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
@@ -155,7 +149,7 @@
               <h4>PANTALÓN CHINO SLIM FIT</h4>
               <p>Zara</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$299</span></p>
+              <p class="precio">$299 <span class="u-pull-right">$200</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
@@ -176,7 +170,7 @@
               <h4>PANTALÓN CINTURA JOGGER EASY CARE</h4>
               <p>Juan Pedro</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$253</span></p>
+              <p class="precio">$253 <span class="u-pull-right">$200</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
@@ -221,7 +215,7 @@
               <h4>CAMISA OXFORD</h4>
               <p>Zara</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$235</span></p>
+              <p class="precio">$235 <span class="u-pull-right">$200</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
@@ -242,7 +236,7 @@
               <h4>Camisa algodon</h4>
               <p>Camisas hombre</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$210</span></p>
+              <p class="precio">$210 <span class="u-pull-right">$200</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
@@ -266,7 +260,7 @@
               <h4>Camisa Moderna</h4>
               <p>Camisas Hombre</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$300</span></p>
+              <p class="precio">$300 <span class="u-pull-right">$200</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
@@ -287,7 +281,7 @@
               <h4>Camisa de playa</h4>
               <p>Camisas Hombre</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$200</span></p>
+              <p class="precio">$200 <span class="u-pull-right">$190</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
@@ -308,7 +302,7 @@
               <h4>100 Recetas de Comida Natural</h4>
               <p>Camisas Hombre</p>
               <img src="img/estrellas.png" />
-              <p class="precio">$200 <span class="u-pull-right">$15</span></p>
+              <p class="precio">$200 <span class="u-pull-right">$152</span></p>
               <a
                 href="#"
                 class="u-full-width button input agregar-carrito"
