--- a/JavaScript/14-filtros automoviles/index.html
+++ b/JavaScript/14-filtros automoviles/index.html
@@ -100,6 +100,21 @@
           </div>
         </form>
       </div>
+      <div class="container-card">
+        <div class="card">
+          <img
+            src="https://http2.mlstatic.com/D_NQ_NP_823278-MCO72247902172_102023-O.webp"
+            alt=""
+          />
+          <div class="description-card">
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="./js/data.js"></script>
     <script src="./js/app.js"></script>
