--- a/JavaScript/14-filtros automoviles/index.html
+++ b/JavaScript/14-filtros automoviles/index.html
@@ -23,6 +23,7 @@
               <select id="marca">
                 <option value="">Seleccione</option>
                 <option value="BMW">BMW</option>
+                <option value="Nissan">Nissan</option>
                 <option value="Audi">Audi</option>
                 <option value="Mercedes Benz">Mercedes Benz</option>
                 <option value="Chevrolet">Chevrolet</option>
@@ -91,10 +92,10 @@
               <label for="color">Color</label>
               <select id="color">
                 <option value="">Seleccione</option>
-                <option value="negro">Negro</option>
-                <option value="azul">Azul</option>
-                <option value="blanco">Blanco</option>
-                <option value="rojo">Rojo</option>
+                <option value="Negro">Negro</option>
+                <option value="Azul">Azul</option>
+                <option value="Blanco">Blanco</option>
+                <option value="Rojo">Rojo</option>
               </select>
             </div>
           </div>
