--- a/JavaScript/14-filtros automoviles/index.html
+++ b/JavaScript/14-filtros automoviles/index.html
@@ -84,7 +84,7 @@
               <label for="transmision">Transmision</label>
               <select id="transmision">
                 <option value="">Seleccione</option>
-                <option value="automatica">Automatica</option>
+                <option value="automatico">Automatica</option>
                 <option value="manual">Manual</option>
               </select>
             </div>
