--- a/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/index.html
+++ b/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/index.html
@@ -55,7 +55,14 @@
     </header>
 
     <div id="lista-productos" class="container">
-      <h1 id="encabezado" class="encabezado">Productos</h1>
+      <div class="tittles">
+        <button class="borrar-producto pantalones">Pantalones</button>
+        <button class="borrar-producto camisas">Camisas</button>
+        <button class="borrar-producto descuentos">Descuentos</button>
+        <button class="borrar-producto all-products">
+          Todos los Productos
+        </button>
+      </div>
       <div class="card_container"></div>
     </div>
     <script src="js/data.js"></script>
