--- a/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/index.html
+++ b/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/index.html
@@ -49,6 +49,7 @@
                 </div>
               </li>
             </ul>
+            <i id="theme" class="bx bxs-bulb"></i>
           </div>
         </div>
       </div>
