--- a/JavaScript/riwi/index.html
+++ b/JavaScript/riwi/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    
+
     <link rel="stylesheet" href="./css/style.css" />
     <title>Riwi Eco</title>
   </head>
@@ -164,6 +164,9 @@
       </section>
       <button id="vaciar" type="button" class="btn btn-secondary">
         Vaciar Canecas
+      </button>
+      <button id="vaciarAll" type="button" class="btn btn-secondary">
+        Vaciar Todos los Pisos
       </button>
     </div>
 
