--- a/JavaScript/riwi/index.html
+++ b/JavaScript/riwi/index.html
@@ -17,6 +17,8 @@
 
   <body>
     <div class="contenedor_principal">
+      <div class="alert" role="alert">A simple danger alert—check it out!</div>
+
       <select
         class="form-select"
         id="select_floor"
