--- a/JavaScript/riwi/index.html
+++ b/JavaScript/riwi/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <div class="contenedor_principal">
-      <div class="alert" role="alert">A simple danger alert—check it out!</div>
+      <div id="alerE" class="alert" role="alert"></div>
 
       <select
         class="form-select"
@@ -73,6 +73,7 @@
             </div>
             <div class="modal-footer">
               <button
+                id="btnClose"
                 type="button"
                 class="btn btn-secondary"
                 data-bs-dismiss="modal"
