--- a/JavaScript/Veterinaria/index.html
+++ b/JavaScript/Veterinaria/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="col-12 col-md-6 p-3">
           <h4>Administrar citas</h4>
-          <div class="container-cites d-flex flex-wrap gap-3">
+          <div id="containerCites" class="container-cites d-flex flex-wrap gap-3">
             <div class="card card_cite">
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Dobi</h5>
@@ -158,6 +158,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/bootstrapValidator.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/funtcion.js"></script>
   </body>
 </html>
