--- a/JavaScript/Veterinaria/index.html
+++ b/JavaScript/Veterinaria/index.html
@@ -56,7 +56,7 @@
                   >Telefono del propietario</label
                 >
                 <input
-                name="phoneNumber"
+                  name="phoneNumber"
                   type="tel"
                   class="form-control"
                   id="phone_person"
@@ -72,7 +72,7 @@
                   >Fecha de la cita</label
                 >
                 <input
-                name="date"
+                  name="date"
                   type="date"
                   class="form-control"
                   id="date_cite"
@@ -85,7 +85,7 @@
               <div class="mb-3">
                 <label for="name_pet" class="form-label">Hora de la cita</label>
                 <input
-                name="time"
+                  name="time"
                   type="time"
                   class="form-control"
                   id="time_cite"
@@ -98,7 +98,7 @@
               <div class="mb-3">
                 <label for="description" class="form-label">Sintomas</label>
                 <textarea
-                name="description"
+                  name="description"
                   class="form-control"
                   id="description"
                   rows="3"
@@ -114,40 +114,10 @@
         </div>
         <div class="col-12 col-md-6 p-3">
           <h4>Administrar citas</h4>
-          <div id="containerCites" class="container-cites d-flex flex-wrap gap-3">
-            <div class="card card_cite">
-              <div class="card-body">
-                <h5 class="card-title fs-3 fw-bold">Dobi</h5>
-                <p class="card-text">
-                  <div class="d-flex gap-2">
-                    <span class="fw-bold">Propietario:</span>
-                    <span>Kewvin</span>
-                  </div>
-                  <div class="d-flex gap-2">
-                    <span class="fw-bold">Telefono:</span>
-                    <span>343443</span>
-                  </div>
-                  <div class="d-flex gap-2">
-                    <span class="fw-bold">Fecha:</span>
-                    <span>22-04-34</span>
-                  </div>
-                  
-                  <div class="d-flex gap-2">
-                    <span class="fw-bold">Hora:</span>
-                    <span>10:30</span>
-                  </div>
-                  <div class="d-flex gap-2">
-                    <span class="fw-bold">Sintomas:</span>
-                    <span>10:30</span>
-                  </div>
-                </p>
-                <div class="d-flex gap-2">
-                  <button class="btn btn-primary">Editar</button>
-                  <button class="btn btn-danger">Eliminar</button>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div
+            id="containerCites"
+            class="container-cites d-flex flex-wrap gap-3"
+          ></div>
         </div>
       </div>
     </main>
@@ -159,7 +129,7 @@
     ></script>
     <script src="js/bootstrapValidator.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/function.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/funtcion.js"></script>
   </body>
 </html>
