--- a/JavaScript/20 - Consumir API/peli/index.html
+++ b/JavaScript/20 - Consumir API/peli/index.html
@@ -7,6 +7,12 @@
     <title>API Peliculas</title>
   </head>
   <body>
+    <section class="banner">
+      <div class="input-box">
+        <input type="text" required id="search" class="text" />
+        <span>Buscar Pelicula</span>
+      </div>
+    </section>
     <script src="./js/app.js"></script>
   </body>
 </html>
