--- a/JavaScript/20 - Consumir API/peli/index.html
+++ b/JavaScript/20 - Consumir API/peli/index.html
@@ -12,6 +12,7 @@
         <input type="text" required id="search" class="text" />
         <span>Buscar Pelicula</span>
       </div>
+      <div></div>
     </section>
     <script src="./js/app.js"></script>
   </body>
