--- a/JavaScript/20 - Consumir API/peli/index.html
+++ b/JavaScript/20 - Consumir API/peli/index.html
@@ -9,11 +9,12 @@
   <body>
     <section class="banner">
       <div class="input-box">
-        <input type="text" required id="search" class="text" />
+        <input type="text" id="search" class="text" required />
         <span>Buscar Pelicula</span>
       </div>
-      <div></div>
     </section>
+
+    <section class="container-cards"></section>
     <script src="./js/app.js"></script>
   </body>
 </html>
