--- a/JavaScript/20 - Consumir API/peli/index.html
+++ b/JavaScript/20 - Consumir API/peli/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
     <title>API Peliculas</title>
   </head>
@@ -14,39 +19,7 @@
       </div>
     </section>
 
-    <section class="container-cards">
-      <div class="card-info">
-        <div class="img">
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTg5NzY0MzA2MV5BMl5BanBnXkFtZTYwNDc3NTc2._V1_SX300.jpg"
-            alt=""
-          />
-        </div>
-        <div class="info">
-          <h2 class="tittle-movie">Cars</h2>
-          <div class="rating">Rotten Tomatoes: 75%</div>
-          <div class="sub-info">
-            <p>Estreno: 09 Jun 2006</p>
-            <p>classification: G</p>
-            <p>Duracion: 117 min</p>
-            <p>Genero: Animacion, Aventura, Comedia</p>
-          </div>
-          <div class="sub-info2">
-            <p>Directores: John Lasseter, Joe Ranft</p>
-            <p>Escritores: John Lasseter, Joe Ranft, Jorgen Klubien</p>
-            <p>Actores: Owen Wilson, Bonnie Hunt, Paul Newman</p>
-            <p>
-              Trama: On the way to the biggest race of his life, a hotshot
-              rookie race car gets stranded in a rundown town and learns that
-              winning isn't everything in life.
-            </p>
-            <p>
-              Premios: Nominated for 2 Oscars. 28 wins & 34 nominations total
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <script src="./js/app.js"></script>
+    <section class="container-cards"></section>
+    <script src="./js/app.js" type="module"></script>
   </body>
 </html>
