--- a/Project 2024/index.html
+++ b/Project 2024/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Riwi Games</title>
   </head>
+
   <body>
     <nav>
       <img src="./styles/img/rlogo.png" alt="" />
+      <div class="nav-bar">
+        <a href=""> Home </a>
+        <a href="">Activities</a>
+      </div>
+      <span>Riwi Games</span>
     </nav>
 
     <link rel="stylesheet" href="./js/app.js" type="module" />
