--- a/Project 2024/index.html
+++ b/Project 2024/index.html
@@ -17,6 +17,17 @@
       </div>
       <span>Riwi Games</span>
     </nav>
+    <section class="container">
+      <div class="card">
+        <h2></h2>
+        <img src="" alt="" />
+        <div class="info"></div>
+        <div class="cont-buttons">
+          <button></button>
+          <button></button>
+        </div>
+      </div>
+    </section>
 
     <link rel="stylesheet" href="./js/app.js" type="module" />
   </body>
