--- a/JavaScript/22 - Json Server/index.html
+++ b/JavaScript/22 - Json Server/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
 
     <title>Document</title>
   </head>
 
-  <body class="d-flex flex-column align-items-center p-5 justify-content-center">
+  <body
+    class="d-flex flex-column align-items-center p-5 justify-content-center"
+  >
     <form id="form">
       <h2>Create/Update Users</h2>
       <input type="hidden" id="user-id" />
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="user-name" placeholder="Your name" />
+        <input
+          type="text"
+          class="form-control"
+          id="user-name"
+          placeholder="Your name"
+        />
         <label for="user-name">User name</label>
       </div>
 
       <div class="form-floating mb-3">
-        <input type="number" class="form-control" id="user-age" placeholder="Your Age" />
+        <input
+          type="number"
+          class="form-control"
+          id="user-age"
+          placeholder="Your Age"
+        />
         <label for="user-age">User age</label>
       </div>
       <button class="btn btn-success w-100" type="submit">Save</button>
@@ -43,5 +58,4 @@
     </section>
     <script src="js/app.js" type="module"></script>
   </body>
-
 </html>
