--- a/JavaScript/SPACEX/index.html
+++ b/JavaScript/SPACEX/index.html
@@ -13,25 +13,51 @@
     <title>SPECEX</title>
   </head>
   <body>
-    <main>
-      <section class="container">
+    <main class="d-flex flex-column align-items-center">
+      <section class="container row justify-content-center">
+        <!-- Button trigger modal -->
+
+        <!-- Modal -->
         <div
-          class="card d-flex flex-column align-items-center text-center"
-          style="width: 18rem"
+          class="modal fade"
+          id="exampleModal"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
         >
-          <img
-            src="https://images2.imgbox.com/3c/0e/T8iJcSN3_o.png"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">FalconSat</h5>
-            <p class="card-text">2006</p>
-            <a href="#" class="btn btn-primary">Ver Inf-mision</a>
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">
+                  Modal title
+                </h1>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">...</div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Close
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
     </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/app.js" type="module"></script>
   </body>
 </html>
