--- a/JavaScript/SPACEX/index.html
+++ b/JavaScript/SPACEX/index.html
@@ -25,20 +25,15 @@
           aria-labelledby="exampleModalLabel"
           aria-hidden="true"
         >
-          <div class="modal-dialog">
+          <div class="modal-dialog ">
             <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">
-                  Modal title
-                </h1>
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Close"
-                ></button>
+              <div class="modal-header d-flex align-items-center justify-content-center">
+                <h1
+                  class="modal-title fs-5"
+                  id="exampleModalLabel"
+                ></h1>
               </div>
-              <div class="modal-body">...</div>
+              <div class="modal-body ">...</div>
               <div class="modal-footer">
                 <button
                   type="button"
