--- a/JavaScript/22 - Json Server/index.html
+++ b/JavaScript/22 - Json Server/index.html
@@ -49,7 +49,8 @@
             <th>Id</th>
             <th>Name</th>
             <th>Age</th>
-            <th>Actions</th>
+            <th class="text-center">Edit</th>
+            <th class="text-center">Delete</th>
           </tr>
         </thead>
 
