--- a/simulacro/administrator.html
+++ b/simulacro/administrator.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/libs/bootstrap.min.css" />
     <title>Login</title>
     <script src="./js/hooks/bootstrapSession.js"></script>
+    <link rel="stylesheet" href="./css/adm.css" />
   </head>
   <body>
     <!-- HEADER -->
@@ -150,68 +151,7 @@
               </tr>
             </thead>
 
-            <tbody id="categorias-tbody">
-              <tr>
-                <td>
-                  <img
-                    src="https://img.freepik.com/foto-gratis/mano-que-sostiene-campana-anuncios-marketing-megafono_53876-129003.jpg"
-                    alt="photo"
-                    height="50"
-                    width="50"
-                    class="rounded-circle"
-                  />
-                </td>
-                <td>Noticia de Tecnología</td>
-                <td>Últimas noticias sobre tecnología e innovación</td>
-                <td>2024-01-30</td>
-                <td>Kevin Mejia</td>
-                <td>Tecnología</td>
-                <td>
-                  <button class="btn btn-primary">Edit</button>
-                  <button class="btn btn-danger">Delete</button>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <img
-                    src="https://img.freepik.com/foto-gratis/mano-que-sostiene-campana-anuncios-marketing-megafono_53876-129003.jpg"
-                    alt="photo"
-                    height="50"
-                    width="50"
-                    class="rounded-circle"
-                  />
-                </td>
-                <td>Noticia de Tecnología</td>
-                <td>Últimas noticias sobre tecnología e innovación</td>
-                <td>2024-01-30</td>
-                <td>Kevin Mejia</td>
-                <td>Tecnología</td>
-                <td>
-                  <button class="btn btn-primary">Edit</button>
-                  <button class="btn btn-danger">Delete</button>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <img
-                    src="https://img.freepik.com/foto-gratis/mano-que-sostiene-campana-anuncios-marketing-megafono_53876-129003.jpg"
-                    alt="photo"
-                    height="50"
-                    width="50"
-                    class="rounded-circle"
-                  />
-                </td>
-                <td>Noticia de Tecnología</td>
-                <td>Últimas noticias sobre tecnología e innovación</td>
-                <td>2024-01-30</td>
-                <td>Kevin Mejia</td>
-                <td>Tecnología</td>
-                <td>
-                  <button class="btn btn-primary">Edit</button>
-                  <button class="btn btn-danger">Delete</button>
-                </td>
-              </tr>
-            </tbody>
+            <tbody id="notices-tbody"></tbody>
           </table>
         </div>
       </div>
