--- a/simulacro/index.html
+++ b/simulacro/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/libs/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Riwi Noticias</title>
   </head>
   <body>
@@ -58,32 +59,13 @@
       class="container my-4 d-flex flex-wrap justify-content-center cards-container"
     >
       <!-- CARD EXAMPLE -->
-      <div class="card mb-3" style="max-width: 540px">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img
-              src="https://img.freepik.com/foto-gratis/mano-que-sostiene-campana-anuncios-marketing-megafono_53876-129003.jpg"
-              class="img-fluid rounded-start"
-              alt="..."
-            />
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Title Notice</h5>
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-body-secondary">1/02/2024</small>
-              </p>
-            </div>
-          </div>
-        </div>
+      <div
+        id="contenedor-news"
+        class="card mb-3 d-flex flex-row justify-content-center align-items-center gap-3 p-2 flex-wrap"
+        style="max-width: 1250px"
+      >
+        
       </div>
-
-      
     </main>
 
     <script src="js/libs/bootstrap.bundle.min.js"></script>
