Correcciones y mejoras filtro

--- a/JavaScript/filtroJS/administrator.html
+++ b/JavaScript/filtroJS/administrator.html
@@ -43,7 +43,7 @@
 
             <div class="d-flex align-items-center gap-2 p-3 item-nav">
               <i class="bx bx-log-out text-white-50 fs-4"></i>
-              <a href="index.html" class="text-white-50 fs-5 outAd">Log Out</a>
+              <a href="home.html" class="text-white-50 fs-5 outAd">Log Out</a>
             </div>
           </nav>
         </div>
