--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -28,18 +28,17 @@
   <body>
     <header class="header">
       <div class="logo">
-        <div class="img"></div>
         <span>KeiberLLB</span>
       </div>
 
       <nav class="navbar">
-        <a href="#" class="active">Home</a>
-        <a href="#">About</a>
-        <a href="#">Review</a>
-        <a href="#">Feactured</a>
-        <a href="#">Contact</a>
+        <a href="#" class="a">Home</a>
+        <a href="#" class="a">About</a>
+        <a href="#" class="a">Review</a>
+        <a href="#" class="a">Feactured</a>
+        <a href="#" class="a">Contact</a>
       </nav>
-      <div class="social-media">
+      <!-- <div class="social-media">
         <a
           target="_blank"
           href="https://www.linkedin.com/in/k-leandro-l%C3%A1zaro-bastos-8008612a4?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
@@ -67,7 +66,7 @@
         >
           <i class="bx bxl-youtube"></i>
         </a>
-      </div>
+      </div> -->
     </header>
     <footer class="footer">
       <a
